--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "next lint",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx}\"",
     "format:check": "prettier --check \"./**/*.{js,jsx,ts,tsx}\"",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{png,jpeg,jpg,gif}": [
+      "imagemin-lint-staged",
+      "git add"
+    ]
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
@@ -40,6 +47,8 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.8",
