--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "@workos-inc/node": "^4.0.0",
+    "@workos-inc/node": "^7.26.0",
+    "antd": "^5.20.3",
     "eslint": "8.29.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "papaparse": "^5.4.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.69.0",
     "typescript": "4.9.4"
   },
@@ -33,7 +34,7 @@
     "@types/papaparse": "^5.3.7",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -43,11 +44,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.41",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "supabase": "^1.165.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7"
   }
 }
