--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@workos-inc/node": "^7.26.0",
     "antd": "^5.20.3",
     "eslint": "8.29.0",
-    "next": "^14.2.3",
+    "next": "^14.2.8",
     "next-auth": "^4.24.5",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
@@ -31,11 +31,16 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
     "@types/papaparse": "^5.3.7",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.20",
-    "eslint-config-next": "^13.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.8",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.3",
