--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18",
@@ -52,8 +51,9 @@
     "postcss": "^8.4.41",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.8",
-    "supabase": "^1.165.0",
+    "supabase": "^1.192.5",
     "tailwindcss": "^3.4.10",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   }
 }
