--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "18.0.9",
     "@workos-inc/node": "^7.26.0",
     "antd": "^5.20.3",
+    "date-fns": "^3.6.0",
     "eslint": "8.29.0",
     "next": "^14.2.8",
     "next-auth": "^4.24.5",
