--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,17 @@
 {
   "extends": [
-    "eslint:recommended",
     "next/core-web-vitals",
-    "plugin:import/errors",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "prettier"
   ],
+  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
   "rules": {
     "@typescript-eslint/no-empty-function": 0,
     "max-len": [
@@ -19,42 +22,13 @@
 				"ignoreStrings": true
 			}
 		],
-    "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0,
     "quotes": ["error", "single"]
   },
-  "plugins": ["react", "import", "@typescript-eslint"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": "./tsconfig.json",
-    "ecmaVersion": 2022,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true
-  },
   "settings": {
-    "react": {
-      "version": "detect"
-    },
     "import/parsers": {
       "@typescript-eslint/parser": [".ts", ".tsx"]
     },
     "import/resolver": {
-      "alias": {
-        "map": [
-          ["@constants/*", "./constants/*"],
-          ["@utils/*", "./utils/*"],
-          ["@db/*", "./db/*"],
-          ["@hooks", "./hooks"]
-        ],
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      },
       "typescript": {
         "alwaysTryTypes": true
       }
