--- a/package.json
+++ b/package.json
@@ -16,20 +16,15 @@
     "@formkit/auto-animate": "^0.8.1",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@types/node": "18.11.12",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
     "@workos-inc/node": "^7.26.0",
     "antd": "^5.20.3",
     "dayjs": "^1.11.13",
-    "eslint": "8.29.0",
     "next": "^14.2.8",
     "next-auth": "^4.24.5",
     "papaparse": "^5.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sass": "^1.69.0",
-    "typescript": "4.9.4"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -55,6 +50,6 @@
     "supabase": "^1.192.5",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5.4.0"
   }
 }
