--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@formkit/auto-animate": "^0.8.1",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
