--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@formkit/auto-animate": "^0.8.1",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.47.10",
     "@workos-inc/node": "^7.26.0",
     "antd": "^5.20.3",
     "dayjs": "^1.11.13",
-    "next": "^15.1.7",
+    "next": "15.1.7",
     "next-auth": "^4.24.5",
     "papaparse": "^5.4.1",
     "react": "^19.0.0",
@@ -28,22 +29,23 @@
     "sass": "^1.69.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.7",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.41",
     "prettier": "^2.8.4",
@@ -51,6 +53,6 @@
     "supabase": "^2.1.1",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.4.0"
+    "typescript": "^5"
   }
 }
