--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3'
 services:
   nextjs:
     build:
@@ -13,7 +14,5 @@ services:
     environment:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
-      - NEXT_PUBLIC_SUPABASE_URL=https://kcnpwpsgtxaokmgaqalc.supabase.co
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtjbnB3cHNndHhhb2ttZ2FxYWxjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTM2NTU1MjgsImV4cCI6MjAyOTIzMTUyOH0.eIefOeERB2XVe_UPIdN_X8kTUmdmSOQKol-qFtCY_9M
-      - WHATSAPP_ACCESS_TOKEN=EAAXoABubay8BO6mNrXTM8uObSpnyzp4qVUeJ1ad1Tfk4hz5tmYRehCqlSpvGTRjHxV1ubac8LxTtUXEaZCDBtLVYrdqxS70yBULlylLD29JDNMoZC6WEGrCvD287gZBTxzr5MUPZCgVFAhW6Yf9o9XZAnCikxxiIiWtT5PIfJYTDZAE5doVqGWD3nLXF9epbfQ7lZBZAcYZAZCUrxFUsxthoSwjYkZD
-      - WHATSAPP_PHONE_NUMBER_ID=581051488424919
+    env_file:
+      - .env.development
